--- a/styles.css
+++ b/styles.css
@@ -65,11 +65,11 @@ ul li{
 }
 
 /* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 3000px) {
+/*@media screen and (max-width: 3000px) {
   .column {
     width: 100%;
   }
-}
+}*/
 
 /*.work, .publications, .conferences, .awards, .comingevents{
 	font-size: 20px
