--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body{
 	margin:0;
 	font-family: Arial, Helvetica, sans-serif;
 	position: relative;
-	font-size: 20px;
+	font-size: 1.8vw;
 	line-height: 25px;
 /*	text-align: center;*/
 }
@@ -39,7 +39,7 @@ img{
 }
 h1{
 	/*font-family: Arial, Helvetica, sans-serif;*/
-	font-size: 25px;
+	font-size: 2vw;
 	line-height: 300%;
 	color: #1d55b3;
 }
@@ -47,7 +47,7 @@ h1{
 header h1{
 	line-height: 0px;
 	/*font-family: Arial, Helvetica, sans-serif;*/
-	font-size: 30px;
+	font-size: 3vw;
 	color: #1d55b3;
 }
 
@@ -88,7 +88,7 @@ ul li{
 }
 
 h2{
-	font-size: 20px;
+	font-size: 1.8vw;
 	line-height: 100%;
 	color: #1d55b3;
 }
@@ -109,7 +109,7 @@ footer{
 }
 
 h3{
-	font-size: 20px;
+	font-size: 1.8vw;
 	font-weight: normal;
 	/*color: #1d55b3;*/
 /*	font-style: italic;*/
