--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,8 @@ body{
 	margin:0;
 	font-family: Arial, Helvetica, sans-serif;
 	position: relative;
-	font-size: 1.8vw;
-	line-height: 25px;
+	font-size: 1.5vw;
+	line-height: 150%;
 /*	text-align: center;*/
 }
 
@@ -47,7 +47,7 @@ h1{
 header h1{
 	line-height: 0px;
 	/*font-family: Arial, Helvetica, sans-serif;*/
-	font-size: 3vw;
+	font-size: 2.5vw;
 	color: #1d55b3;
 }
 
@@ -88,7 +88,7 @@ ul li{
 }
 
 h2{
-	font-size: 1.8vw;
+	font-size: 1.5vw;
 	line-height: 100%;
 	color: #1d55b3;
 }
@@ -109,7 +109,7 @@ footer{
 }
 
 h3{
-	font-size: 1.8vw;
+	font-size: 1.5vw;
 	font-weight: normal;
 	/*color: #1d55b3;*/
 /*	font-style: italic;*/
